@@ -1,0 +1,1 @@
+CREATE TABLE datetime_test (d DATETIME);
