@@ -1,0 +1,1 @@
+CREATE TABLE timestamp_test (d TIMESTAMP);
