@@ -1,0 +1,6 @@
+PREHOOK: query: CREATE TABLE alter_test (d STRING)
+PREHOOK: type: CREATETABLE
+POSTHOOK: query: CREATE TABLE alter_test (d STRING)
+POSTHOOK: type: CREATETABLE
+POSTHOOK: Output: default@alter_test
+FAILED: Error in semantic analysis: DATE, DATETIME, and TIMESTAMP types aren't supported yet. Please use STRING instead.
