@@ -3,7 +3,7 @@ PREHOOK: type: DROPTABLE
 POSTHOOK: query: DROP TABLE INPUTDDL8
 POSTHOOK: type: DROPTABLE
 PREHOOK: query: CREATE TABLE INPUTDDL8 COMMENT 'This is a thrift based table'
-    PARTITIONED BY(ds DATETIME, country STRING)
+    PARTITIONED BY(ds STRING, country STRING)
     CLUSTERED BY(aint) SORTED BY(lint) INTO 32 BUCKETS
     ROW FORMAT SERDE 'org.apache.hadoop.hive.serde2.thrift.ThriftDeserializer'
     WITH SERDEPROPERTIES ('serialization.class' = 'org.apache.hadoop.hive.serde2.thrift.test.Complex',
@@ -11,7 +11,7 @@ PREHOOK: query: CREATE TABLE INPUTDDL8 COMMENT 'This is a thrift based table'
     STORED AS SEQUENCEFILE
 PREHOOK: type: CREATETABLE
 POSTHOOK: query: CREATE TABLE INPUTDDL8 COMMENT 'This is a thrift based table'
-    PARTITIONED BY(ds DATETIME, country STRING)
+    PARTITIONED BY(ds STRING, country STRING)
     CLUSTERED BY(aint) SORTED BY(lint) INTO 32 BUCKETS
     ROW FORMAT SERDE 'org.apache.hadoop.hive.serde2.thrift.ThriftDeserializer'
     WITH SERDEPROPERTIES ('serialization.class' = 'org.apache.hadoop.hive.serde2.thrift.test.Complex',
@@ -29,10 +29,10 @@ lint	array<int>	from deserializer
 lstring	array<string>	from deserializer
 lintstring	array<org.apache.hadoop.hive.serde2.thrift.test.IntString>	from deserializer
 mstringstring	map<string,string>	from deserializer
-ds	datetime	
+ds	string	
 country	string	
 	 	 
-Detailed Table Information	Table(tableName:inputddl8, dbName:default, owner:njain, createTime:1253780774, lastAccessTime:0, retention:0, sd:StorageDescriptor(cols:[], location:file:/data/users/njain/hive5/hive5/build/ql/test/data/warehouse/inputddl8, inputFormat:org.apache.hadoop.mapred.SequenceFileInputFormat, outputFormat:org.apache.hadoop.hive.ql.io.HiveSequenceFileOutputFormat, compressed:false, numBuckets:32, serdeInfo:SerDeInfo(name:null, serializationLib:org.apache.hadoop.hive.serde2.thrift.ThriftDeserializer, parameters:{serialization.class=org.apache.hadoop.hive.serde2.thrift.test.Complex,serialization.format=com.facebook.thrift.protocol.TBinaryProtocol}), bucketCols:[aint], sortCols:[Order(col:lint, order:1)], parameters:{}), partitionKeys:[FieldSchema(name:ds, type:datetime, comment:null), FieldSchema(name:country, type:string, comment:null)], parameters:{comment=This is a thrift based table})	
+Detailed Table Information	Table(tableName:inputddl8, dbName:default, owner:pyang, createTime:1264209638, lastAccessTime:0, retention:0, sd:StorageDescriptor(cols:[], location:file:/data/users/pyang/task2/trunk/VENDOR.hive/trunk/build/ql/test/data/warehouse/inputddl8, inputFormat:org.apache.hadoop.mapred.SequenceFileInputFormat, outputFormat:org.apache.hadoop.hive.ql.io.HiveSequenceFileOutputFormat, compressed:false, numBuckets:32, serdeInfo:SerDeInfo(name:null, serializationLib:org.apache.hadoop.hive.serde2.thrift.ThriftDeserializer, parameters:{serialization.class=org.apache.hadoop.hive.serde2.thrift.test.Complex,serialization.format=com.facebook.thrift.protocol.TBinaryProtocol}), bucketCols:[aint], sortCols:[Order(col:lint, order:1)], parameters:{}), partitionKeys:[FieldSchema(name:ds, type:string, comment:null), FieldSchema(name:country, type:string, comment:null)], parameters:{transient_lastDdlTime=1264209638,comment=This is a thrift based table}, viewOriginalText:null, viewExpandedText:null)	
 PREHOOK: query: DROP TABLE INPUTDDL8
 PREHOOK: type: DROPTABLE
 POSTHOOK: query: DROP TABLE INPUTDDL8
